--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,10 @@ authors = [
     { name = "ikura1", email = "ikura.lab@gmail.com" }
 ]
 dependencies = [
+    "streamlit>=1.36.0",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
-
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
 
 [tool.rye]
 managed = true
@@ -24,5 +21,5 @@ dev-dependencies = [
     "bandit>=1.7.5",
 ]
 
-[tool.hatch.metadata]
-allow-direct-references = true
+[tool.rye.scripts]
+dev = "streamlit run src/UtilsApp/app.py"
