--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = [
 ]
 dependencies = [
     "streamlit>=1.36.0",
+    "qrcode>=7.4.2",
 ]
 readme = "README.md"
 requires-python = ">= 3.8"
